--- a/server/package.json
+++ b/server/package.json
@@ -23,11 +23,14 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "node": "^21.6.2",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   },
   "proxy": "http://localhost:3000/"
 }
